# odds-scrapper

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: models.py  scraper.py  settings.py  utils.py
