[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Thalison Fernandes <thalissfernandes99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
ua-generator = "^2.0.3"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
ipython = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
